--- a/index.html
+++ b/index.html
@@ -1,13 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Network</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section>
+        <div class="half-width">
+            <h1><span class="span-h1-color">Skip</span> The Diet,<br> Just Eat Healthy<br> With Food Network</h1>
+            <p class="heading-p">If you eat healthy food, you don't need to diet. follow us to find the healthy food. we
+                are always ready
+                to serve you.</p><br><br>
+            <a class="link-button" target="_blank" href="https://www.bing.com/">Order Food</a>
+
+        </div>
+        <div class="half-width">
+            <img src="images/female/Group 8425.png" alt="">
+        </div>
+    </section>
+
+    <!----------------------------------------------------------------------------------------------------->
+
+    <section class="bg-image">
+        <div class="about-half-width">
+            <img src="images/female/Person Image.png" alt="">
+        </div>
+        <div class="about-half-width text-about">
+            <h2>About Me</h2>
+            <p class="about-p">My name is Bella. You can Call Me a Food Lover but please do not call me a foodie. Your
+                definition of
+                foodie may be different than mine but in my mind, a foodie is pretentious about their food experiences
+                and spends more time picking apart the pieces of a meal/dish rather than enjoying the moment.</p><br>
+            <a class="link-button" target="_blank"
+                href="https://www.facebook.com/profile.php?id=100011427746187">Contact me</a>
+        </div>
+    </section>
+
 </body>
+
 </html>
