--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h1><span class="span-h1-color">Skip</span> The Diet,<br> Just Eat Healthy<br> With Food Network</h1>
             <p class="heading-p">If you eat healthy food, you don't need to diet. follow us to find the healthy food. we
                 are always ready
-                to serve you.</p><br><br>
+                to serve you.</p><br><br><br>
             <a class="link-button" target="_blank" href="https://www.bing.com/">Order Food</a>
 
         </div>
@@ -39,7 +39,8 @@
             <p class="about-p">My name is Bella. You can Call Me a Food Lover but please do not call me a foodie. Your
                 definition of
                 foodie may be different than mine but in my mind, a foodie is pretentious about their food experiences
-                and spends more time picking apart the pieces of a meal/dish rather than enjoying the moment.</p><br>
+                and spends more time picking apart the pieces of a meal/dish rather than enjoying the moment.</p>
+            <br><br><br>
             <a class="link-button" target="_blank"
                 href="https://www.facebook.com/profile.php?id=100011427746187">Contact me</a>
         </div>
