my recipie added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="flexible-container">
         <div class="half-width">
             <h1><span class="span-h1-color">Skip</span> The Diet,<br> Just Eat Healthy<br> With Food Network</h1>
             <p class="heading-p">If you eat healthy food, you don't need to diet. follow us to find the healthy food. we
@@ -30,7 +30,7 @@
 
     <!----------------------------------------------------------------------------------------------------->
 
-    <section class="bg-image">
+    <section class="bg-image flexible-container">
         <div class="about-half-width">
             <img src="images/female/Person Image.png" alt="">
         </div>
@@ -46,6 +46,51 @@
         </div>
     </section>
 
+    <!--------------------------------------------------------------------------------------------------------->
+    <section>
+        <div class="my-recipie-make">
+            <h2>My Recipies</h2>
+            <p class="my-recipie-make-p">5 killer dinner recipes, each of which can be explained in a paragraph: Do you
+                believe us? You should,
+                because just like you we constantly want a solution to motivating ourselves to make dinner after a long
+                day of work.</p>
+        </div>
+        <div class="flexible-container">
+            <div class="equal-width">
+                <div>
+                    <img src="images/food/Project Cover.jpg" alt="">
+                </div>
+                <div class="recipies-text">
+                    <h3>Omelette Cookies</h3>
+                    <p class="div-recipies-p">Not only is an omelette quick and easy to make, it is a paragon of
+                        economy. Odds and ends (a.k.a.
+                        leftovers) rise to a new level when placed inside an omelette.</p>
+                </div>
+            </div>
+            <div class="equal-width">
+                <div>
+                    <img src="images/food/Project Cover1.jpg" alt="">
+                </div>
+                <div class="recipies-text">
+                    <h3>Beefsteak</h3>
+                    <p class="div-recipies-p">This is just an excellent beef steak marinade that adds juiciness and
+                        flavour into steaks,
+                        transforming economical steaks from just ok to “wow!”.</p>
+                </div>
+            </div>
+            <div class="equal-width">
+                <div>
+                    <img src="images/food/Project Cover.png" alt="">
+                </div>
+                <div class="recipies-text">
+                    <h3>Thai Soup</h3>
+                    <p class="div-recipies-p">This soup is one of our all-time favorites, and it also happens to be
+                        vegetarian, vegan, and
+                        gluten-free, which makes it perfect for anyone you happen to be cooking for.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
