--- a/index.html
+++ b/index.html
@@ -113,7 +113,6 @@
 
 <!------------------------------------------------------>
 
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -162,7 +161,6 @@
         </div>
     </section>
 
-
     <section>
         <div class="recipe-align">
             <h2>My Recipe</h2>
@@ -205,8 +203,28 @@
             </div>
         </div>
     </section>
+    <section class="apps-part">
+        <div class="div-apps">
+            <h2 class="bold">700k</h2>
+            <p class="small">Youtube Subscribers</p>
+        </div>
+        <div class="div-apps">
+            <h2 class="bold">2.4m</h2>
+            <p class="small">Instagram Followers</p>
+        </div>
+        <div class="div-apps">
+            <h2 class="bold">100k</h2>
+            <p class="small">Dribble Shot Likes</p>
+        </div>
+    </section>
 
 
+
+
+
+
+    <br>
+    <br>
 
 </body>
 
