--- a/index.html
+++ b/index.html
@@ -129,6 +129,20 @@
 </head>
 
 <body>
+
+    <ul>
+        <li><a target="_blank" href="https://www.bing.com/">HOME</a></li>
+        <li><a target="_blank" href="https://www.google.com/">SHOP</a></li>
+        <li><a target="_blank" href="https://www.facebook.com/groups/completewebdevelopment4">ABOUT ME</a></li>
+        <li><a target="_blank" href="https://www.facebook.com/profile.php?id=100011427746187">CONTACT</a></li>
+    </ul>
+
+
+
+
+
+
+
     <section class="flexible-container">
         <div class="half-width">
             <h1><span class="span-h1-color">Skip</span> The Diet,<br> Just Eat Healthy<br> With Food Network</h1>
@@ -216,15 +230,12 @@
             <h2 class="bold">100k</h2>
             <p class="small">Dribble Shot Likes</p>
         </div>
-    </section>
+    </section><br>
 
-
-
-
-
-
-    <br>
-    <br>
+    <footer>
+        <h2 class="last-color"> <span class="footer-color">FOOD </span> NETWORK</h2>
+        <P class="small">Eat healthy to live healthy. Live healthy to live happy.</P>
+    </footer>
 
 </body>
 
