--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-----------------------------------------------------
 <!DOCTYPE html>
 <html lang="en">
 
@@ -15,121 +14,6 @@
 </head>
 
 <body>
-    <section class="flexible-container">
-        <div class="half-width">
-            <h1><span class="span-h1-color">Skip</span> The Diet,<br> Just Eat Healthy<br> With Food Network</h1>
-            <p class="heading-p">If you eat healthy food, you don't need to diet. follow us to find the healthy food. we
-                are always ready
-                to serve you.</p><br><br><br>
-            <a class="link-button" target="_blank" href="https://www.bing.com/">Order Food</a>
-
-        </div>
-        <div class="half-width">
-            <img src="images/female/Group 8425.png" alt="">
-        </div>
-    </section>
-
-    <!-----------------------------------------------------------------------------------------------------
-
-    <section class="bg-image flexible-container">
-        <div class="about-half-width">
-            <img src="images/female/Person Image.png" alt="">
-        </div>
-        <div class="about-half-width text-about">
-            <h2>About Me</h2>
-            <p class="about-p">My name is Bella. You can Call Me a Food Lover but please do not call me a foodie. Your
-                definition of
-                foodie may be different than mine but in my mind, a foodie is pretentious about their food experiences
-                and spends more time picking apart the pieces of a meal/dish rather than enjoying the moment.</p>
-            <br><br><br>
-            <a class="link-button" target="_blank"
-                href="https://www.facebook.com/profile.php?id=100011427746187">Contact me</a>
-        </div>
-    </section>
-
-    <!---------------------------------------------------------------------------------------
-    <section>
-        <div class="my-recipie-make">
-            <h2>My Recipies</h2>
-            <p class="my-recipie-make-p">5 killer dinner recipes, each of which can be explained in a paragraph: Do you
-                believe us? You should,
-                because just like you we constantly want a solution to motivating ourselves to make dinner after a long
-                day of work.</p>
-        </div>
-        <div class="flexible-container">
-            <div class="equal-width">
-                <div>
-                    <img src="images/food/Project Cover.jpg" alt="">
-                </div>
-                <div class="recipies-text">
-                    <h3>Omelette Cookies</h3>
-                    <p class="div-recipies-p">Not only is an omelette quick and easy to make, it is a paragon of
-                        economy. Odds and ends (a.k.a.
-                        leftovers) rise to a new level when placed inside an omelette.</p>
-                </div>
-            </div>
-            <div class="equal-width">
-                <div>
-                    <img src="images/food/Project Cover1.jpg" alt="">
-                </div>
-                <div class="recipies-text">
-                    <h3>Beefsteak</h3>
-                    <p class="div-recipies-p">This is just an excellent beef steak marinade that adds juiciness and
-                        flavour into steaks,
-                        transforming economical steaks from just ok to “wow!”.</p>
-                </div>
-            </div>
-            <div class="equal-width">
-                <div>
-                    <img src="images/food/Project Cover.png" alt="">
-                </div>
-                <div class="recipies-text">
-                    <h3>Thai Soup</h3>
-                    <p class="div-recipies-p">This soup is one of our all-time favorites, and it also happens to be
-                        vegetarian, vegan, and
-                        gluten-free, which makes it perfect for anyone you happen to be cooking for.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!----------------------------------------------------------------------------
-    <section class="followers-part">
-        <div>
-            <h2>700k</h2>
-            <p>Youtube Subscribers</p>
-        </div>
-        <div>
-            <h2>2.4m</h2>
-            <p>Instagram Followers</p>
-        </div>
-        <div>
-            <h2>100k</h2>
-            <p>Dribble Shot Likes</p>
-        </div>
-    </section>
-</body>
-
-</html>
-
-<!------------------------------------------------------>
-
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food Network</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-
     <ul>
         <li><a target="_blank" href="https://www.bing.com/">HOME</a></li>
         <li><a target="_blank" href="https://www.google.com/">SHOP</a></li>
@@ -137,12 +21,6 @@
         <li><a target="_blank" href="https://www.facebook.com/profile.php?id=100011427746187">CONTACT</a></li>
     </ul>
 
-
-
-
-
-
-
     <section class="flexible-container">
         <div class="half-width">
             <h1><span class="span-h1-color">Skip</span> The Diet,<br> Just Eat Healthy<br> With Food Network</h1>
@@ -150,14 +28,11 @@
                 are always ready
                 to serve you.</p><br><br><br>
             <a class="link-button" target="_blank" href="https://www.bing.com/">Order Food</a>
-
         </div>
         <div class="half-width">
             <img src="images/female/Group 8425.png" alt="">
         </div>
     </section>
-
-    <!----------------------------------------------------------------------------------------------------->
 
     <section class="bg-image flexible-container">
         <div class="about-half-width">
@@ -232,11 +107,25 @@
         </div>
     </section><br>
 
+    <section class="time-table">
+        <div class="address-hour">
+            <h3>OPENING HOUR:</h3>
+            <p>Mon-Fri:7am-10pm</p>
+            <p>Saturday:8am-10pm</p>
+            <p>Sunday:8am-11pm</p>
+        </div>
+        <div class="address-hour">
+            <h3>Address:</h3>
+            <p>500 Terry Francois Street</p>
+            <p>San Francisco, CA94158</p>
+            <p>Tel: 123-456-7890</p>
+        </div>
+    </section>
+
     <footer>
         <h2 class="last-color"> <span class="footer-color">FOOD </span> NETWORK</h2>
         <P class="small">Eat healthy to live healthy. Live healthy to live happy.</P>
     </footer>
-
 </body>
 
 </html>
