--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <p>Sunday:8am-11pm</p>
         </div>
         <div class="address-hour">
-            <h3>Address:</h3>
+            <h3>ADDRESS:</h3>
             <p>500 Terry Francois Street</p>
             <p>San Francisco, CA94158</p>
             <p>Tel: 123-456-7890</p>
